fix: fixed message overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,3 +12,19 @@
 body{
   width: 100%;
 }
+
+::-webkit-scrollbar{
+  width: .6rem;
+}
+
+::-webkit-scrollbar-thumb{
+  background: #63B75D; 
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover{
+  background: #0d6107;
+}
+
+::-webkit-scrollbar-track{
+  background: transparent;
+}
